--- a/src/index.css
+++ b/src/index.css
@@ -104,6 +104,10 @@ html {
   scroll-behavior: smooth;
 }
 body {
+  width: 100vw;
+  height: 100vh;
+
+  /* overflow: hidden; */
   line-height: 1;
 }
 ol,
