--- a/src/index.css
+++ b/src/index.css
@@ -105,6 +105,7 @@ html {
 }
 body {
   line-height: 1;
+  background: linear-gradient(45deg, #f3f0e8 30%, #fceea8 60%, #cedfd2 100%);
 }
 ol,
 ul {
